Fix notifications work on iOS

--- a/tests/resources/style.css
+++ b/tests/resources/style.css
@@ -42,6 +42,12 @@
   background-color: rgba(255, 0, 0, .1);
 }
 
+.notes {
+  margin: 0 0 8px 0;
+  padding-top: 8px; padding-bottom: 8px;
+  background-color: rgba(255, 255, 0, .1);
+}
+
 .dialog-content { display: none; }
 
 .no-display { display: none; }
